Importing changes from Android app, which is now on Java 7